# replay_maker_v4

./: .clang-format  .gitignore  CMakeLists.txt  cmake_run.cmd
mpv/include/mpv/: client.h
src/: args.cpp  args.h  drag_drop.cpp  ffprobe_util.cpp  logging.cpp  logging.h  main.cpp  main.h  mpv_interface.cpp  plat_win32.cpp  sys_win32.cpp  sys_win32.h  util.cpp  util.h  vector.hpp
src/clip/: clip.cpp  clip.h  clip_parser.cpp  json5.cpp  json5.h
src/encoder/: encoder.cpp  encoder.h  encoder_main.cpp  logging.cpp  main.cpp  main.h
src/glad/: glad.c  glad.h
src/replay_maker_ui/: key_bind.cpp  main.cpp  main.h  mpv_interface.cpp  sys_win32_replay.cpp  ui_editor.cpp  ui_timeline.cpp  undo.cpp
src/ui/: key_bind.cpp  mpv_interface.cpp  sys_win32_drag_drop.cpp  ui_editor.cpp  ui_encode.cpp  ui_timeline.cpp
